# matebook-16s-sound-fix

./: .gitignore  CMakeLists.txt  Kbuild.in  README.md  matebook_16s_sound_fix.c
